# vigilant-engine

./: .gitignore  CMakeLists.txt  README.md  index.html  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: ci.yml
components/vigilant_engine/: CMakeLists.txt
components/vigilant_engine/include/: http_server.h  pipeline.h  status_led.h
components/vigilant_engine/src/: http_server.c  pipeline.c  status_led.c  vigilant.c
config/: index.html
docs/: config.md  peripherals.md
features/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  main.c  partitions.csv  vigilant.c  vigilant.h
main/static/: vigilant.html
peripherals/: index.html
search/: search_index.json
vigilant-engine-frontend/src/vigilant/: VigilantApp.vue
